--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 <body>
     <div class="credit">Test 3D View CongThanhToan HCMUS voi thu vien <a href="https://github.com/pchen66/panolens.js">Panolens.js</a></div>
-    <script src="/js/lib/three.min.js"></script>
-    <script src="/js/lib/panolens.min.js"></script>
+    <script src="js/lib/three.min.js"></script>
+    <script src="js/lib/panolens.min.js"></script>
     <script>
 
         const panorama = new PANOLENS.ImagePanorama( 'img3D/congtruong.jpg' );
@@ -21,7 +21,7 @@
         viewer.add( panorama );
   
       </script>
-    <!-- <script src="test.js"></script> -->
+    <script src="test.js"></script>
     
 </body>
 </html>
