--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div id="panolens-viewer">
         	
-        <div class="credit">Test 3D View CongThanhToan HCMUS voi thu vien <a href="https://github.com/pchen66/panolens.js">Panolens.js</a></div>
+        <div class="credit">Test 3D View CongThanhToan HCMUS</a></div>
         <script src="js/lib/three.min.js"></script>
         <script src="js/lib/panolens.min.js"></script>
         <script src="test.js"></script>
