--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width, shrink-to-fit=no">
-    <title>Testing</title>
+    <title>Cong Thanh Toan 3D / Testing</title>
     <link rel="stylesheet" href="style.css">
     
     
