Update info spot

--- a/index_2.html
+++ b/index_2.html
@@ -26,13 +26,9 @@
     </div>
 
 
-    <script src="js/lib/three.min.js"></script>
-    <!-- <script src="js/lib/CSS3DRenderer.js"></script> -->
-    <!-- <script src="three.js-master\build\three.min.js"></script> -->
-    <script src="js/lib/panolens.min.js"></script>
-    <!-- <script src="js/lib/krpano.js"></script> -->
-    <script src="test.js"></script>
-    <!-- <script src="working.js"></script> -->
+    <script src="js/lib/three.min_136.js"></script>
+    <script src="js/lib/CSS3DRenderer.js"></script>
+    <script src="working.js"></script>
 
 
 
