Update more infospot & customing toolbar...

--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
         <div id="panel">
             <img width="150" src="img3D/sanhI_1.jpg"/>
         </div>
+        <div class="panelInfo" id="panel_1" style="display:none">
+            <!-- <iframe src="img3D/SanTruong.jpg"></iframe> -->
+            <img src="img3D/SanTruong.jpg"/>
+            <div class="title">San Truong</div>
+            <div class="text">ABCDEFGHIJKLMNOPQRSTUVWXYZ.</div>
+          </div>
         <div id="testContainer" style="background: red">
             <button>ok</button>
         </div>   
@@ -27,6 +33,7 @@
 
 
     <script src="js/lib/three.min.js"></script>
+    <script src="js/lib/tween.umd.js"></script>
     <!-- <script src="js/lib/CSS3DRenderer.js"></script> -->
     <!-- <script src="three.js-master\build\three.min.js"></script> -->
     <script src="js/lib/panolens.min.js"></script>
